# terraform-google-multi-region-private-network

./: .gitignore  .pre-commit-config.yaml  .talismanrc  CHANGELOG.md  Gemfile  README.md  kitchen.yml  main.tf  outputs.tf  pyproject.toml  variables.tf
.devcontainer/: devcontainer.json
.github/workflows/: pre-commit.yml  release-please.yml
test/fixtures/root/: main.tf  outputs.tf  variables.tf
test/integration/multi-region-private-network/: inspec.yml
test/integration/multi-region-private-network/controls/: nats.rb  networks.rb  outputs.rb  routes.rb  subnets.rb
tests/: conftest.py  test_custom_metadata_flow_logging.py  test_disable_restricted_apis.py  test_dual_region.py  test_flow_logging.py  test_gke.py  test_interval_flow_logging.py  test_ipv6_ula.py  test_ipv6_ula_manual.py  test_ipv6_ula_nat.py  test_keep_default_routes.py  test_minimal.py  test_mtu.py  test_nat.py  test_nat_logging.py  test_null_description.py  test_primary_offset_step.py  test_primary_secondary_offset_step.py  test_psc.py  test_psc_name_description.py  test_psc_service_directory.py  test_regional_routing.py  test_secondary_range.py  test_single_region.py  test_tagged_nat.py
tests/fixtures/root/: main.tf  outputs.tf  variables.tf
tests/integration/multi-region-private-network/controls/: networks.rb  outputs.rb  psc.rb  routes.rb  subnets.rb
